--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -24,9 +24,27 @@ h3, p {
 .bird-list {
     padding-top: 1em;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    
     grid-auto-rows: auto;
     grid-gap: 1em;
+}
+
+@media (min-width: 600px) {
+    .bird-list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 900px) {
+    .bird-list {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (min-width: 1200px) {
+    .bird-list {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 .bird {
